refactor(#333): N+1 제거를 위한 브랜드 설명 태그 배치 조회